--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -23,7 +23,7 @@
                     <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
                         asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                         <button type="submit" class="btn btn-sm my-1">
-                            Logout
+                            Sair
                         </button>
                     </form>
                 </li>
@@ -36,7 +36,7 @@
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Registar</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Entrar</a>
         </li>
     }
 </ul>
