--- a/Views/Produtos/Details.cshtml
+++ b/Views/Produtos/Details.cshtml
@@ -1,5 +1,6 @@
 @model Ecomerce.Models.Produto
 @using System.Globalization
+@using Ecomerce.Models
 
 @{
     ViewData["Title"] = Model.Nome;
@@ -8,6 +9,9 @@
     bool isEsgotadoTotal = estoqueTotal <= 0;
     
     bool isPromocaoAtiva = Model.PrecoPromocional.HasValue && Model.PrecoPromocional.Value < Model.Preco;
+
+    List<Variacao> variacoesDisponiveis = Model.Variacoes?.Where(v => v.Estoque > 0).ToList();
+    Variacao variacaoUnica = variacoesDisponiveis?.Count == 1 ? variacoesDisponiveis.First() : null;
 }
 
 <div class="container mt-5">
@@ -62,16 +66,27 @@
                                 <option value="">Escolha um sabor</option>
                                 @foreach (Variacao variacao in Model.Variacoes.Where(v => v.Estoque > 0))
                                 {
-                                    <option value="@variacao.Id" data-estoque="@variacao.Estoque">@variacao.Nome
-                                        (@variacao.Estoque em estoque)</option>
+                                    if (variacao.Id == variacaoUnica?.Id)
+                                    {
+                                        <option value="@variacao.Id" data-estoque="@variacao.Estoque" selected>
+                                            @variacao.Nome (@variacao.Estoque em estoque)
+                                        </option>
+                                    }
+                                    else
+                                    {
+                                        <option value="@variacao.Id" data-estoque="@variacao.Estoque">
+                                            @variacao.Nome (@variacao.Estoque em estoque)
+                                        </option>
+                                    }
                                 }
                             </select>
                         </div>
 
                         <div class="mb-4">
                             <label for="quantidade" class="form-label fw-bold">Quantidade:</label>
-                            <input type="number" name="quantidade" id="quantidade" value="1" min="1" max="1"
+                            <input type="number" name="quantidade" id="quantidade" value="1" min="1" 
                                 class="form-control shadow-sm text-center" style="width: 100px;" required />
+                            <input type="hidden" name="ProdutoId" value="@Model.Id" />
                         </div>
 
                         <button type="submit" id="btnAdicionar" class="btn btn-lg btn-primary shadow-sm">
@@ -99,9 +114,11 @@
 @section Scripts {
     <script>
         $(document).ready(function () {
-            $('#VariacaoId').on('change', function () {
-                var select = $(this);
-                var maxEstoque = select.find(':selected').data('estoque') || 1;
+            
+            function atualizarEstoqueMax() {
+                var select = $('#VariacaoId');
+                var selectedOption = select.find(':selected');
+                var maxEstoque = selectedOption.data('estoque') || 1;
                 var quantidadeInput = $('#quantidade');
 
                 quantidadeInput.attr('max', maxEstoque);
@@ -111,7 +128,13 @@
                 } else if (parseInt(quantidadeInput.val()) === 0) {
                     quantidadeInput.val(1);
                 }
-            });
+            }
+
+            if ($('#VariacaoId').val()) {
+                atualizarEstoqueMax();
+            }
+
+            $('#VariacaoId').on('change', atualizarEstoqueMax);
 
             $('#formAdicionarCarrinho').submit(function (e) {
                 if (!$('#VariacaoId').val()) {
