--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,12 +43,18 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarAdminDropdown">
                                     <li>
                                         <a class="dropdown-item" asp-controller="Pedidos" asp-action="Index">
-                                            <i class="fas fa-box"></i> Gerenciar Pedidos
+                                            <i class="fas fa-box-open"></i> Gerenciar Pedidos
                                         </a>
                                     </li>
                                     <li>
                                         <a class="dropdown-item" asp-controller="Produtos" asp-action="Index">
                                             <i class="fas fa-box-open"></i> Gerenciar Produtos
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Cupons"
+                                            asp-action="Index">
+                                            <i class="fas fa-box-open"></i> Gerenciar Cupons
                                         </a>
                                     </li>
                                 </ul>
@@ -80,7 +86,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <partial name="_NotificacoesToast" /> 
+    <partial name="_NotificacoesToast" />
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
